[gd_scene load_steps=3 format=3 uid="uid://c4ofxsbndmexq"]

[ext_resource type="Script" uid="uid://doau4c6nhgyco" path="res://scripts/player.gd" id="1_3vyb7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sh265"]
size = Vector2(50, 50)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3vyb7")
max_speed = 900.0
acceleration = 10000.0
friction = 5000.0
gravity = 2000.0
jump_speed = 750.0
wall_jump_off_speed = 550.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sh265")

[node name="Polygon2D" type="Polygon2D" parent="CollisionShape2D"]
color = Color(0.807843, 0, 0, 1)
polygon = PackedVector2Array(-25, 25, -25, -25, 25, -25, 25, 25)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="BounceCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BoostCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="boost" from="." to="." method="_on_boost"]
[connection signal="bounce" from="." to="." method="_on_bounce"]
[connection signal="kill" from="." to="." method="_on_kill"]
[connection signal="win" from="." to="." method="_on_win"]
